# gporca

./: .clang-format  CMakeLists.txt  StyleGuide.md
concourse/: build_and_test.py
data/dxl/metadata/: md.xml
data/dxl/minidump/: AddPredsInSubqueries.mdp  AllSubqueryWithSubqueryInScalar.mdp  AntiSemiJoin2Select-1.mdp  AntiSemiJoin2Select-2.mdp  AnySubq-With-NonScalarSubqueryChild-1.mdp  AnySubq-With-NonScalarSubqueryChild-2.mdp  AnySubq-With-NonScalarSubqueryChild-3.mdp  AssertOneRowWithCorrelation.mdp  BitmapIndexScan.mdp  CTE-12.mdp  CTE-4.mdp  CTE-5.mdp  CTE-PartTbl.mdp  CTE-Preds2.mdp  CTE-volatile.mdp  CTG-Join.mdp  CastOnSubquery.mdp  CastedInClauseWithMCV.mdp  Correlated-AntiSemiJoin.mdp  Correlated-LASJ-With-Outer-Col.mdp  Correlated-LASJ-With-Outer-Const.mdp  Correlated-LASJ-With-Outer-Expr.mdp  Correlated-SemiJoin.mdp  CorrelatedAntiSemiJoin-True.mdp  CorrelatedIN-LeftSemiJoin-True.mdp  CorrelatedIN-LeftSemiNotIn-True.mdp  CorrelatedNLJ-PartSelector-Subplan.mdp  CorrelatedSemiJoin-True.mdp  Correlation-With-Casting-1.mdp  Correlation-With-Casting-2.mdp  CountAny.mdp  CountStar.mdp  DPE-IN.mdp  DPE-NOT-IN.mdp  DPE-SemiJoin.mdp  Date-TimeStamp-HashJoin.mdp  DonotPushPartConstThruLimit.mdp  DynamicBitmapIndexScan.mdp  DynamicBitmapTableScan-Basic.mdp  DynamicIndexGet-OuterRefs.mdp  (+181 more)
data/dxl/multilevel-partitioning/: Multilevel-Casting-cast_boundary_value_to_date.mdp  Multilevel-Casting-cast_partition_column_to_text.mdp  Multilevel-Casting-no_casting.mdp  Multilevel-Casting-predicate-on-all-levels.mdp  Multilevel-Casting-predicate-on-non-leaf-levels.mdp  Multilevel-Casting-predicate-on-non-root-levels.mdp  Multilevel-ConstPred-AllLevels-Default.mdp  Multilevel-ConstPred-AllLevels-NoDefault.mdp  Multilevel-ConstPred-Level1-Default.mdp  Multilevel-ConstPred-Level1-NoDefault.mdp  Multilevel-ConstPred-Level2-Default.mdp  Multilevel-ConstPred-Level2-NoDefault.mdp  Multilevel-FullScan.mdp  Multilevel-JoinPred-AllLevels.mdp  Multilevel-JoinPred-Level1.mdp  Multilevel-JoinPred-Level2.mdp  Multilevel-Nary-Join.mdp
data/dxl/parse_tests/: OptimizerConfig.xml
data/dxl/tpch/: q1-partitioned.mdp
libgpdbcost/src/: CCostModelGPDB.cpp
libgpopt/: CMakeLists.txt
libgpopt/include/gpopt/base/: CConstraint.h  CRewindabilitySpec.h  CUtils.h
libgpopt/include/gpopt/metadata/: CIndexDescriptor.h
libgpopt/include/gpopt/operators/: CExpressionPreprocessor.h  CLogicalDynamicIndexGet.h  CLogicalIndexApply.h  CLogicalInnerIndexApply.h  CLogicalLeftOuterIndexApply.h  CLogicalValuesGet.h  COperator.h  CPhysicalConstTableGet.h  CPhysicalInnerNLJoin.h  CPhysicalMotionGather.h  CPhysicalScan.h  CPhysicalSpool.h  CPhysicalValuesGet.h  CPredicateUtils.h  CScalarConstArray.h  ops.h
libgpopt/include/gpopt/translate/: CTranslatorDXLToExpr.h  CTranslatorExprToDXL.h  CTranslatorExprToDXLUtils.h
libgpopt/include/gpopt/xforms/: CJoinOrder.h  CJoinOrderGreedy.h  CJoinOrderMinCard.h  CXform.h  CXformImplementIndexApply.h  CXformImplementInnerIndexApply.h  CXformImplementLeftOuterIndexApply.h  CXformImplementValuesGet.h  CXformJoin2IndexApply.h  CXformJoin2IndexApplyBase.h  CXformUtils.h  xforms.h
libgpopt/src/base/: CConstraint.cpp  CConstraintConjunction.cpp  CConstraintInterval.cpp  CDatumSortedSet.cpp  CRewindabilitySpec.cpp  CUtils.cpp
libgpopt/src/engine/: CEngine.cpp
libgpopt/src/metadata/: CIndexDescriptor.cpp  CTableDescriptor.cpp
libgpopt/src/operators/: CExpression.cpp  CExpressionPreprocessor.cpp  CLogical.cpp  CLogicalDynamicIndexGet.cpp  CLogicalIndexApply.cpp  CLogicalValuesGet.cpp  CPhysicalConstTableGet.cpp  CPhysicalInnerNLJoin.cpp  CPhysicalJoin.cpp  CPhysicalMotionGather.cpp  CPhysicalScan.cpp  CPhysicalSpool.cpp  CPhysicalValuesGet.cpp  CPredicateUtils.cpp  CScalarArrayCmp.cpp  CScalarConstArray.cpp  CScalarSubqueryQuantified.cpp
libgpopt/src/translate/: CTranslatorDXLToExpr.cpp  CTranslatorExprToDXL.cpp  CTranslatorExprToDXLUtils.cpp
libgpopt/src/xforms/: CJoinOrder.cpp  CJoinOrderGreedy.cpp  CJoinOrderMinCard.cpp  CXformFactory.cpp  CXformImplementValuesGet.cpp  CXformJoin2IndexApply.cpp  CXformSplitDQA.cpp  CXformUtils.cpp
libgpos/include/gpos/common/: CHashMap.h  CHashMap.inl
libnaucrates/: CMakeLists.txt
libnaucrates/include/naucrates/dxl/operators/: CDXLColRef.h  CDXLLogicalValuesGet.h  CDXLOperator.h  CDXLOperatorFactory.h  CDXLPhysicalNLJoin.h  CDXLPhysicalValuesScan.h  CDXLScalarIdent.h  dxlops.h
libnaucrates/include/naucrates/dxl/parser/: CParseHandlerFactory.h  CParseHandlerMDIndexInfoList.h  CParseHandlerNLJIndexParam.h  CParseHandlerNLJIndexParamList.h  CParseHandlerNLJoin.h  parsehandlers.h
libnaucrates/include/naucrates/dxl/xml/: dxltokens.h
libnaucrates/include/naucrates/md/: CMDIndexInfo.h  CMDPartConstraintGPDB.h  CMDRelationExternalGPDB.h  CMDRelationGPDB.h  IMDCast.h  IMDIndex.h  IMDRelation.h
libnaucrates/src/md/: CMDArrayCoerceCastGPDB.cpp  CMDCastGPDB.cpp  CMDIndexGPDB.cpp  CMDIndexInfo.cpp  CMDPartConstraintGPDB.cpp  CMDRelationExternalGPDB.cpp  CMDRelationGPDB.cpp  IMDIndex.cpp  IMDRelation.cpp
libnaucrates/src/operators/: CDXLColRef.cpp  CDXLOperatorFactory.cpp  CDXLPhysicalNLJoin.cpp  CDXLPhysicalValuesScan.cpp  CDXLScalarIdent.cpp
libnaucrates/src/parser/: CParseHandlerFactory.cpp  CParseHandlerMDArrayCoerceCast.cpp  CParseHandlerMDCast.cpp  CParseHandlerMDIndex.cpp  CParseHandlerMDRelation.cpp  CParseHandlerMDRelationExternal.cpp  CParseHandlerNLJIndexParam.cpp  CParseHandlerNLJIndexParamList.cpp  CParseHandlerNLJoin.cpp
libnaucrates/src/statistics/: CStatistics.cpp  CStatsPredUtils.cpp
libnaucrates/src/xml/: dxltokens.cpp
scripts/: format.bash
server/: CMakeLists.txt
server/include/unittest/dxl/: CParseHandlerTest.h
server/src/unittest/: CTestUtils.cpp
server/src/unittest/dxl/: CParseHandlerTest.cpp
server/src/unittest/dxl/statistics/: CJoinCardinalityTest.cpp
server/src/unittest/gpopt/minidump/: CICGTest.cpp
